# Rombus

./: .gitignore  .pre-commit-config.yaml  .pre-commit-db.json  .pre-commit-db.py  .readthedocs.yml  Makefile  README.md  log.py  pyproject.toml  reduced_basis.py  setup.py
.github/workflows/: bump.yml  publish.yml  pull_request.yml
docs/: .gitignore  notes_for_developers.md  overview.rst
docs/_templates/: conf.py_t  package.rst_t  root_doc.rst_t
docs/content/: cli.rst  getting_started.md  how_does_it_work.md  index.rst  notes_for_developers.md  rombus.rst
docs/content/example/: demo.ipynb  my_model.py
greedy-mpi/: make_basis_linear_greedy.py
greedy_mpi/: GreedyPoints.txt  __init__.py  filepaths.py  makeEI.py  make_basis_linear_greedy.py  misc.py  setup.py
greedy_mpi/greedy_mpi/: GreedyPoints.npy  make_basis_linear_greedy.py
greedy_mpi/greedy_mpi/rompy/: eim.py
greedy_mpi/rompy/: __init__.py  algorithms.py  eim.py  fit.py  greedy.py  integrals.py  lib.py  training.py
greedy_mpi/studies/: compare_rom_to_true.py  make_empirical_interpolant.py  make_reduced_basis.py
greedy_mpi/studies/finesse/: HRDeformation_2D_SurfaceHeating_x0Var.npz  OPD_3D_SurfaceHeating_x0Var.npz  TemperatureChange_3D_SurfaceHeating_x0Var.npz  Unravel 3D.ipynb  fnodes.npy  make_empirical_interpolant.py  make_reduced_basis.py  unravel basis-dimensionless_physical_dimension.ipynb  unravel basis.ipynb  validate_basis.py  xy_ravel_indices.npy  xy_ravel_indices_dimensionless_physical_dimension.npy
greedy_mpi/studies/training_set_from_file/: TSfile.npy  greedypts.npy  make_empirical_interpolant.py  make_reduced_basis.py
python/rombus/: PhenomP.py  ROM.py  __init__.py  algorithms.py  cli.py  core.py  ei.py  eim.py  empirical_interpolant.py  exceptions.py  filepaths.py  fit.py  greedy.py  importer.py  integrals.py  lib.py  misc.py  model.py  mpi.py  params.py  plot.py  plots.py  reduced_basis.py  rom.py  samples.py  training.py
python/rombus/_core/: algorithms.py  eim.py  fit.py  greedy.py  hdf5.py  lib.py  misc.py  mpi.py
python/rombus/_core/log/: __init__.py  log.py
python/rombus/models/: PhenomP.py  PhenomP_samples.csv  sinc.py  sinc_samples.csv
python/rombus/rompy/: lib.py  training.py
python/rombus/scripts/: cli.py  compare_rom_to_true.py  make_empirical_interpolant.py  make_reduced_basis.py
python/rombus/tests/: PhenomP.py  conftest.py  test_PhenomP.py  test_cli.py  test_misc.py  test_reduced_basis.py  test_rombus.py
python/rombus/tests/data/: LALSuite_test_grid.npy
python/tests/: test_lal.py  test_misc.py  test_rombus.py  test_rompy.py
tests/: test_rompy.py
