[tool.poetry]
name = "rombus"
version = "0.0.0-dev"
description = "Reduced order modeling for the masses"
authors = [
            "Gregory Poole <gbpoole@gmail.com>",
            "J. Hu <jitinghu@swin.edu.au>",
            ]
license = "MIT-expat"

readme = "README.md"

packages = [
    { include = "rombus", from = "python" }
]

homepage = "https://github.com/ADACS-Australia/rombus"
documentation = "https://rombus.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = " >=3.11"
scipy = "^1.9.3"
mpi4py = "^3.1.4"
h5py = "^3.8.0"
six = "^1.16.0"
matplotlib = "^3.6.2"
click = "^8.1.3"
rich = "^13.3.3"
Sphinx = { version = "^6.1.3", optional = true }
sphinx-rtd-theme = { version = "1.2.0", optional = true }
myst-parser = { version = "^1.0.0", optional = true }
pre-commit = { version = "^3.0.4", optional = true }
pytest = { version = "^7.0", optional = true }
black = { version = "^22.10.0", optional = true }
ruff = { version = "^0.0.243", optional = true}
sphinx-click = { version = "^4.4.0", optional = true }
mypy = { version = "^1.1.1", optional = true }
sphinx-copybutton = { version = "^0.5.1", optional = true }

[tool.poetry.extras]
docs = [
   "Sphinx",
   "sphinx-rtd-theme",
   "myst-parser",
   "sphinx-click",
   "sphinx-copybutton",
]
dev = ["pre-commit",
       "pytest",
       "mypy",
       "black",
       "ruff",
]

[tool.poetry.scripts]
rombus = "rombus.cli:cli"

[tool.pytest.ini_options]
markers = [ "lalsuite: Tests that require LALSuite to be installed" ]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.ruff]
line-length = 88
select = [
    "E",
    "F",
    "W",
]
ignore = [
    "E501", # line length violations (let Black handle this)
]

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.pydocstyle]
convention = "numpy"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
