[project]
name = "rombus"
version = "0.0.0-dev"
description = "Reduced order modeling for the masses"
authors = [
    { name = "Gregory Poole", email = "gbpoole@gmail.com"},
    { name = "J. Hu", email = "jitinghu@swin.edu.au"},
]
license = "MIT-expat"
readme = "README.md"
packages = [
    { include = "rombus", from = "python" }
]
homepage = "https://github.com/ADACS-Australia/rombus"
documentation = "https://rombus.readthedocs.io/en/latest/"
dynamic = ["version"]
requires-python=">=3.11"
dependencies = [
    "scipy==1.9.3",
    "h5py (>=3.8.0,<4.0.0)",
    "six (>=1.16.0,<2.0.0)",
    "matplotlib (>=3.6.2,<4.0.0)",
    "click (>=8.1.3,<9.0.0)",
    "rich (>=13.3.3,<14.0.0)",
]

[project.optional-dependencies]
docs = [
    "Sphinx (>=6.1.3,<7.0.0)",
    "sphinx-rtd-theme==1.2.0",
    "myst-parser (>=1.0.0,<2.0.0)",
    "sphinx-click (>=4.4.0,<5.0.0)",
    "sphinx-copybutton (>=0.5.1,<1.0.0)",
]
dev = [
    "pre-commit (>=3.0.4,<4.0.0)",
    "pytest (>=7.0,<8.0.0)",
    "pytest-cov>=4.1.0",
    "black (>=22.10.0,<23.0.0)",
    "ruff (>=0.0.243,<1.0.0)",
    "mypy (>=1.1.1,<2.0.0)",
]
mpi = [
    "mpi4py (>3.1.4,<4.0.0)",
]

[project.scripts]
rombus = "rombus.cli:cli"

[tool.pytest.ini_options]
addopts = "--cov"
markers = [ "lalsuite: Tests that require LALSuite to be installed" ]

[tool.poetry]
packages = [
    { include = "rombus", from = "python" },
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.mypy]
ignore_missing_imports = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/python"

[tool.coverage.paths]
source = ["python"]

[tool.coverage.run]
branch = true
source = ["python"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:"
]

[tool.ruff]
line-length = 88 # to match Black
select = [
    "E",
    "F",
    "W",
]
ignore = [
    "E501", # line length violations (let Black handle this)
]

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.pydocstyle]
convention = "numpy"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
